# demo-python

./: pyproject.toml
demo_python/: __main__.py  cluster_deploy.py
tests/: test_demo_python.py
